# yacsl

./: CMakeLists.txt  README.md  sample.cpp
include/yacsl/: ObjectMapping.h  Serializer.h
include/yacsl/detail/: Field.h  MetaUtils.h
include/yacsl/protocol/: JSON.h
